--- a/Resume_Online_Project/docker-compose.yml
+++ b/Resume_Online_Project/docker-compose.yml
@@ -1,15 +1,17 @@
-version: "3.9"
+version: "3.8"
 services:
+  db:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: test_db
+    ports:
+      - "3307:3306"
+    volumes:
+      - $HOME/Desktop/MySQL-Snippets/school.sql:/school.sql
+
   web:
     build: .
     ports:
       - "5000:5000"
-    volumes:
-      - .:/code
-      - logvolume01:/var/log
-    links:
-      - redis
-  redis:
-    image: redis
-volumes:
-  logvolume01: {}
