--- a/Resume_Online_Project/docker-compose.yml
+++ b/Resume_Online_Project/docker-compose.yml
@@ -1,17 +1,32 @@
 version: "3.8"
 services:
   db:
+    build: .
     image: mysql:5.7
+    container_name: database
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: test_db
     ports:
       - "3307:3306"
-    volumes:
-      - $HOME/Desktop/MySQL-Snippets/school.sql:/school.sql
+    environment: 
+      PORT : 3006
+    healthcheck:
+      test: curl --fail -s http://localhost:3306/ || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   web:
     build: .
+    container_name: app
     ports:
       - "5000:5000"
+    environment: 
+      PORT : 5000
+    healthcheck:
+      test: curl --fail -s http://localhost:5000/ || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 5
