--- a/Resume_Online_Project/docker-compose.yml
+++ b/Resume_Online_Project/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.8"
+## About database
 services:
   db:
     build: .
@@ -12,12 +13,14 @@ services:
       - "3307:3306"
     environment: 
       PORT : 3006
+    ## https://www.grottedubarbu.fr/docker-healthcheck/
     healthcheck:
       test: curl --fail -s http://localhost:3306/ || exit 1
       interval: 30s
       timeout: 10s
       retries: 5
 
+## About the web project
   web:
     build: .
     container_name: app
@@ -25,6 +28,7 @@ services:
       - "5000:5000"
     environment: 
       PORT : 5000
+    ## https://www.grottedubarbu.fr/docker-healthcheck/
     healthcheck:
       test: curl --fail -s http://localhost:5000/ || exit 1
       interval: 30s
