--- a/Resume_Online_Project/docker-compose.yml
+++ b/Resume_Online_Project/docker-compose.yml
@@ -1,16 +1,20 @@
-version: "3.8"
+version: "3"
 ## About database
 services:
   db:
-    build: .
-    image: mysql:5.7
+    build: ./db
+    image: mysql/mysql-server
     container_name: database
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: test_db
+      MYSQL_ROOT_PASSWORD: "password"
+      MYSQL_DATABASE: "test_db"
+      MYSQL_PASSWORD: "password"
+      MYSQL_USER: "user"
     ports:
-      - "3307:3306"
+      - "33062:33062"
+    volumes: 
+      - ./db:/db
     environment: 
       PORT : 3006
     ## https://www.grottedubarbu.fr/docker-healthcheck/
@@ -22,12 +26,14 @@ services:
 
 ## About the web project
   web:
-    build: .
+    build: ./app
     container_name: app
     ports:
       - "5000:5000"
     environment: 
       PORT : 5000
+    volumes: 
+      -./app:/app
     ## https://www.grottedubarbu.fr/docker-healthcheck/
     healthcheck:
       test: curl --fail -s http://localhost:5000/ || exit 1
